sign in is done spseration between database to logic ui logic to code logic, integrated firestore and firbaseAuth to the system. TODO finish Signup (firestore integration) add a refaeralcode system to the signup, (we dont want anyone be able to sign in into the worker system).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.Shifty"
         tools:targetApi="31">
         <activity
-            android:name=".SignUpScreen"
+            android:name=".ui.SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginScreen"
+            android:name=".ui.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
