--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.firebase:firebase-firestore")
 
+    // Add the dependency for the Realtime Database library
+    implementation("com.google.firebase:firebase-database-ktx")
+
+
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
 
@@ -59,4 +63,7 @@ dependencies {
     //material design
     implementation "com.google.android.material:material:1.10.0"
     implementation("androidx.fragment:fragment:1.6.1")
+
+    //chocosolver
+    implementation files('build/libs/chocosolver.jar')
 }
