--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,6 @@
             android:name=".ui.EmployeeActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.EmployeeActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.SignupActivity"
             android:exported="false" />
         <activity
@@ -32,6 +29,9 @@
             </intent-filter>
         </activity>
 
+
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
