option to add SystemNeed is working.
TODO
need to create the function for create schdule button. need to make
Model adapter, model solver, and model retriver + notifcation stright to Employees.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
             android:name=".ui.EmployeeActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.AdminActivity"
+            android:exported="false"/>
+        <activity
             android:name=".ui.SignupActivity"
             android:exported="false" />
         <activity
